# parallel-system-assignment-04-mpi-omp

./: CMakeLists.txt  compile.sh  main (copy).cpp  main.cpp  main_wrong_answ.cpp  mpi_program
